[package]
name = "sshx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rand = "0.8.5"
futures = "0.3.30"
russh = { path = "deps/russh-0.43.0-beta.1"}
russh-keys = {path = "deps/russh-keys-0.42.0"}
async-trait = "0.1.77"
env_logger = "0.11.2"
log = "0.4.20"
totp-lite = "2.0.1"
pty-process = { version = "0.4.0", features = ["tokio", "async"] }